fdo#42134 FORMATTING: Autofit does not work properly on long texts

Change-Id: I18e314913122ffbc15659ced9d1b746d10ccc17c